test/tests/errors/error-record-cannot-const.sm
// true
// false
/**/
/**/

program {
    record person(name, age);
    const x = person;
}